samples/_failures_safe/1761621089_9c40c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2be43cab.c: In function ‘bfs’:
./samples/SAFE/__tmp_2be43cab.c:163:30: error: expected ‘;’ at end of input
  163 |     for (int i = 0; i < graph
      |                              ^
      |                              ;
./samples/SAFE/__tmp_2be43cab.c:163:5: error: expected declaration or statement at end of input
  163 |     for (int i = 0; i < graph
      |     ^~~
